css/styles.css
@import "./normalize.css";

:root {
  --color-purple-to-blue: linear-gradient(#b95cff, #195ed3);
  --color-purple-to-blue-right: linear-gradient(to right, #b95cff, #195ed3);
  --color-yellow-to-orange: linear-gradient(#ffaf00, #ff8614);
  --color-orange-to-red-right: linear-gradient(to right, #ff8901, #ff314e);
  --color-red-to-lightRed: linear-gradient(#ff3051, #ff1c97);
  --color-pink-to-darkPink: linear-gradient(#fe14e7, #b81ee0);
}

html {
  font-size: 62.5%;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Topography */
body {
  font-family: "Roboto", Georgia, "Times New Roman", Times, serif;
  font-size: 2.1rem;
  font-weight: 400;
}

h1,
h2 {
  margin: 0 0 2rem;
  font-weight: 500;
}

h1 {
  font-size: 5.1rem;
}

h2 {
  font-size: 4.1rem;
}

p {
  margin-top: 0;
}

a {
  text-decoration: none;
}

.container {
  max-width: 1440px;
  margin: 0 auto;
}

/* Buttons */
.btn {
  padding: 2rem 6rem;
  font-size: 2.3rem;
  border: 0;
  cursor: pointer;
  transition: all 0.2s;
}

.btn:hover {
  transform: scale(1.02);
}

.btn--outlined {
  outline: none;
  background: #fff;
  box-shadow: 0 0 2px #666;
  transition: all 0.15s;
}

.btn--outlined:hover {
  background: var(--color-purple-to-blue-right);
  color: #fff;
}

.btn--colored {
  background: var(--color-orange-to-red-right);
  color: #fff;
}

/* Lists */

.list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.list--arrow .list__item {
  background: url("../images/Ellipse.png") no-repeat;
  padding-left: 4rem;
  padding-bottom: 1rem;
}

/* Cards */

.card {
  display: flex;
  flex-direction: column;
  padding: 2rem;
  padding-right: 6.1rem;
  position: relative;
  cursor: pointer;
  transition: all 0.5s;
}

.card--rounded {
  border-radius: 40px;
}

.card:hover {
  transform: scale(1.05);
}

.card.card--perspectiveX:hover {
  transform: perspective(100rem) rotateY(10deg);
  transform-origin: 0 50%;
  box-shadow: -7px 7px 10px #666;
}

.card.card--perspectiveY:hover {
  transform-origin: 50% 70%;
  transform: perspective(100rem) rotateX(10deg);
  box-shadow: 0 8px 8px -4px #666;
}

.card--purple-to-blue {
  background: var(--color-purple-to-blue);
  color: #fff;
}

.card--yellow-to-orange {
  background: var(--color-yellow-to-orange);
  color: #fff;
}

.card--red-to-lightRed {
  background: var(--color-red-to-lightRed);
  color: #fff;
}

.card--pink-to-darkPink {
  background: var(--color-pink-to-darkPink);
  color: #fff;
}

.card:hover .card__arrow {
  right: 3%;
}

.card__description {
  margin-bottom: 0;
}

.card .card__arrow {
  width: 2rem;
  position: absolute;
  bottom: 10%;
  right: 5%;
  transition: right 0.5s;
}

/* Testimonial card */

.testimonial {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background: #f3f3f3;
  padding: 12rem 2rem 2rem;
}

.testimonial__avatar {
  position: absolute;
  left: calc(50% - 7.5rem);
  top: -7.5rem;
  width: 15rem;
}

.testimonial__description {
  font-weight: 300;
}

.testimonial__author {
  font-size: 3.4rem;
  color: #ff6300;
  margin-bottom: 0;
}

@media screen and (max-width: 500px) {
  .testimonial {
    padding: 7rem 2rem 1rem;
  }

  .testimonial__description {
    font-size: 1.8rem;
  }

  .testimonial__avatar {
    width: 12rem;
    left: calc(50% - 6rem);
  }

  .testimonial__author {
    font-size: 3rem;
  }
}

/* Icons */
.icon {
  width: 40px;
  height: 40px;
}

.icon:hover,
.icon--small:hover {
  cursor: pointer;
}

.icon--small {
  width: 30px;
  height: 30px;
}

.icon--blue {
  fill: #4073de;
}

/* Collapsibles */
.collapsible {
  display: flex;
  justify-content: space-between;
}

.collapsible__content {
  max-height: 0;
  overflow: hidden;
  opacity: 0;
}

.collapsible--expanded .collapsible__content {
  max-height: 100vh;
  opacity: 1;
}

/* Navigation bar */

.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  padding: 1rem;
}

.nav__list {
  width: 100%;
  margin-top: 1rem;
}

.nav__item {
  padding: 0.5rem 0;
  border-bottom: 1px solid #bbb;
}

.nav__item > a {
  color: #4073de;
}

.nav__heading {
  font-size: 4.5rem;
  position: relative;
  margin-bottom: 0;
}

.nav__heading a {
  color: #4073de;
}

.nav__reg-sign {
  display: inline-block;
  position: absolute;
  color: #4073de;
  font-size: 2.3rem;
  top: 5px;
}

@media screen and (max-width: 500px) {
  .nav__heading {
    font-size: 3.5rem;
  }

  .nav__list {
    font-size: 1.9rem;
  }

  .nav__reg-sign {
    font-size: 1.4rem;
  }
}

@media screen and (min-width: 768px) {
  .nav {
    padding: 0 2rem;
    padding-right: 0;
  }

  .nav__toggler {
    display: none;
  }

  .nav__heading {
    font-size: 5.1rem;
  }

  .nav__list {
    display: flex;
    width: auto;
    margin-top: 0;
    font-size: 2rem;
    opacity: 1;
    max-height: 100vh;
  }

  .nav__item {
    font-size: 1.8rem;
    padding: 4rem 1.9rem;
    border: 0;
    transition: all 0.3s;
  }

  .nav__item:hover {
    background: var(--color-purple-to-blue);
  }

  .nav__item:hover > a {
    color: #fff;
  }
}

@media screen and (min-width: 1024px) {
  .nav {
    padding-left: 4rem;
  }

  .nav__item {
    font-size: 2.2rem;
    padding: 5rem 3.5rem;
  }
}

@media screen and (min-width: 1440px) {
  .nav__item {
    font-size: 2.4rem;
    padding: 5rem 5rem;
  }
}

/* Blocks */
.block {
  padding: 2rem 1rem;
}

@media screen and (min-width: 768px) {
  .block {
    padding: 0 2rem;
  }
}

@media screen and (min-width: 1440px) {
  .block {
    padding: 0 8rem;
  }
}

/* Grids */

.grid {
  display: grid;
}

@media screen and (min-width: 650px) {
  .grid--1x4 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (min-width: 768px) {
  .grid--1x2 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (min-width: 1140px) {
  .grid--1x4 {
    grid-template-columns: repeat(4, 1fr);
  }
}

/* Hero component */
.hero__banner {
  width: 100%;
  display: block;
  position: relative;
  z-index: -1;
}
/* ... */

